src/main/java/calculator/parser/antlr/LabeledExprParser.java
// Generated from LabeledExpr.g4 by ANTLR 4.13.2
package calculator.parser.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class LabeledExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, MUL=37, DIV=38, ADD=39, 
		SUB=40, BOOL=41, ID=42, INT=43, ENOTATION=44, FLOAT=45, NEWLINE=46, WS=47;
	public static final int
		RULE_expr = 0, RULE_setting = 1, RULE_sumPostfix = 2, RULE_productPostfix = 3, 
		RULE_unaryPostfix = 4, RULE_trigoPostfix = 5, RULE_atomPostfix = 6, RULE_sumPrefix = 7, 
		RULE_productPrefix = 8, RULE_unaryPrefix = 9, RULE_trigoPrefix = 10, RULE_atomPrefix = 11, 
		RULE_sumInfix = 12, RULE_productInfix = 13, RULE_atomInfix = 14, RULE_unaryInfix = 15, 
		RULE_trigoInfix = 16, RULE_complexNumber = 17, RULE_number = 18, RULE_random = 19, 
		RULE_constant = 20, RULE_rational = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"expr", "setting", "sumPostfix", "productPostfix", "unaryPostfix", "trigoPostfix", 
			"atomPostfix", "sumPrefix", "productPrefix", "unaryPrefix", "trigoPrefix", 
			"atomPrefix", "sumInfix", "productInfix", "atomInfix", "unaryInfix", 
			"trigoInfix", "complexNumber", "number", "random", "constant", "rational"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'seed'", "'('", "')'", "'reset_seed'", "'realPre'", "'scNot'", 
			"','", "'useDeg'", "'displayReal'", "'root'", "'^'", "'log'", "'sqrt'", 
			"'sin'", "'cos'", "'tan'", "'sinh'", "'cosh'", "'tanh'", "'asin'", "'acos'", 
			"'atan'", "'degToRad'", "'radToDeg'", "'i'", "'rand_int'", "'rand_real'", 
			"'rand_ratio'", "'rand_cmplx'", "'pi'", "'PI'", "'Pi'", "'pI'", "'\\u03C0'", 
			"'E'", "'e'", "'*'", "'/'", "'+'", "'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "MUL", "DIV", "ADD", "SUB", "BOOL", "ID", "INT", "ENOTATION", "FLOAT", 
			"NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LabeledExpr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LabeledExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(LabeledExprParser.EOF, 0); }
		public SettingContext setting() {
			return getRuleContext(SettingContext.class,0);
		}
		public SumInfixContext sumInfix() {
			return getRuleContext(SumInfixContext.class,0);
		}
		public SumPrefixContext sumPrefix() {
			return getRuleContext(SumPrefixContext.class,0);
		}
		public SumPostfixContext sumPostfix() {
			return getRuleContext(SumPostfixContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(44);
				setting();
				}
				break;
			case 2:
				{
				setState(45);
				sumInfix(0);
				}
				break;
			case 3:
				{
				setState(46);
				sumPrefix();
				}
				break;
			case 4:
				{
				setState(47);
				sumPostfix();
				}
				break;
			}
			setState(50);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SettingContext extends ParserRuleContext {
		public SettingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setting; }
	 
		public SettingContext() { }
		public void copyFrom(SettingContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SettingGetSeedContext extends SettingContext {
		public SettingGetSeedContext(SettingContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterSettingGetSeed(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitSettingGetSeed(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitSettingGetSeed(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SettingSetUseDegContext extends SettingContext {
		public TerminalNode BOOL() { return getToken(LabeledExprParser.BOOL, 0); }
		public SettingSetUseDegContext(SettingContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterSettingSetUseDeg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitSettingSetUseDeg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitSettingSetUseDeg(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SettingSetSeedContext extends SettingContext {
		public TerminalNode INT() { return getToken(LabeledExprParser.INT, 0); }
		public SettingSetSeedContext(SettingContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterSettingSetSeed(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitSettingSetSeed(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitSettingSetSeed(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SettingGetDisplayRealContext extends SettingContext {
		public SettingGetDisplayRealContext(SettingContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterSettingGetDisplayReal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitSettingGetDisplayReal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitSettingGetDisplayReal(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SettingSetScNotIntContext extends SettingContext {
		public List<TerminalNode> INT() { return getTokens(LabeledExprParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(LabeledExprParser.INT, i);
		}
		public SettingSetScNotIntContext(SettingContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterSettingSetScNotInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitSettingSetScNotInt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitSettingSetScNotInt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SettingSetRealPrecisionContext extends SettingContext {
		public TerminalNode INT() { return getToken(LabeledExprParser.INT, 0); }
		public SettingSetRealPrecisionContext(SettingContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterSettingSetRealPrecision(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitSettingSetRealPrecision(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitSettingSetRealPrecision(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SettingGetUseDegContext extends SettingContext {
		public SettingGetUseDegContext(SettingContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterSettingGetUseDeg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitSettingGetUseDeg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitSettingGetUseDeg(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SettingResetSeedContext extends SettingContext {
		public SettingResetSeedContext(SettingContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterSettingResetSeed(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitSettingResetSeed(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitSettingResetSeed(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SettingSetScNotBoolContext extends SettingContext {
		public TerminalNode BOOL() { return getToken(LabeledExprParser.BOOL, 0); }
		public SettingSetScNotBoolContext(SettingContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterSettingSetScNotBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitSettingSetScNotBool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitSettingSetScNotBool(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SettingGetScNotContext extends SettingContext {
		public SettingGetScNotContext(SettingContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterSettingGetScNot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitSettingGetScNot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitSettingGetScNot(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SettingGetRealPrecisionContext extends SettingContext {
		public SettingGetRealPrecisionContext(SettingContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterSettingGetRealPrecision(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitSettingGetRealPrecision(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitSettingGetRealPrecision(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SettingSetDisplayRealContext extends SettingContext {
		public TerminalNode BOOL() { return getToken(LabeledExprParser.BOOL, 0); }
		public SettingSetDisplayRealContext(SettingContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).enterSettingSetDisplayReal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LabeledExprListener ) ((LabeledExprListener)listener).exitSettingSetDisplayReal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LabeledExprVisitor ) return ((LabeledExprVisitor<? extends T>)visitor).visitSettingSetDisplayReal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SettingContext setting() throws RecognitionException {
		SettingContext _localctx = new SettingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_setting);
		try {
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new SettingSetSeedContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				match(T__0);
				setState(53);
				match(T__1);
				setState(54);
				match(INT);
				setState(55);
				match(T__2);
				}
				break;
			case 2:
				_localctx = new SettingResetSeedContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(56);
					match(T__0);
					setState(57);
					match(T__1);
					setState(58);
					match(T__2);
					}
					break;
				case T__3:
					{
					setState(59);
					match(T__3);
					setState(60);
					match(T__1);
					setState(61);
					match(T__2);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 3:
				_localctx = new SettingGetSeedContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(64);
				match(T__0);
				}
				break;
			case 4:
				_localctx = new SettingSetRealPrecisionContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(65);
				match(T__4);
				setState(66);
				match(T__1);
				setState(67);
				match(INT);
				setState(68);
				match(T__2);
				}
				break;
			case 5:
				_localctx = new SettingGetRealPrecisionContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(69);
				match(T__4);
				}
				break;
			case 6:
				_localctx = new SettingSetScNotIntContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(70);
				match(T__5);
				setState(71);
				match(T__1);
				setState(72);
				match(INT);
				setState(73);
				match(T__6);
				setState(74);
				match(INT);
				setState(75);
				match(T__2);
				}
				break;
			case 7:
				_localctx = new SettingSetScNotBoolContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(76);
				match(T__5);
				setState(77);
				match(T__1);
				setState(78);
				match(BOOL);
				setState(79);
				match(T__2);
				}
				break;
			case 8:
				_localctx = new SettingGetScNotContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(80);
				match(T__5);
				}
				break;
			case 9:
				_localctx = new SettingSetUseDegContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(81);
				match(T__7);
				setState(82);
				match(T__1);
				setState(83);
				match(BOOL);
				setState(84);
				match(T__2);
				}
				break;
			case 10:
				_localctx = new SettingGetUseDegContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(85);
				match(T__7);
				}
				break;
			case 11:
				_localctx = new SettingSetDisplayRealContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(86);
				match(T__8);
				setState(87);
				match(T__1);
				setState(88);
				match(BOOL);
				setState(89);
				match(T__2);
				}
				break;
			case 12:
				_localctx = new SettingGetDisplayRealContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(90);
				match(T__8);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
